[tool.poetry]
name = "neuronbox"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build-frontend = "neuronbox:build_frontend"
start-server = "neuronbox:start_server"
