[package]
name = "neuronbox"
version = "0.0.0"
description = "Usable local and private AI on your own computer"
authors = ["Micah Lee <micah@micahflee.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }
anyhow = "1.0.75"

[dependencies]
tauri = { version = "1.4", features = [ "dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
